Backspace doesn't work in Gmail compose window (and web apps which listenes to mutation events)
Categories
(Core :: DOM: Editor, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox73 | --- | unaffected |
| firefox74 | --- | unaffected |
| firefox75 | blocking | fixed |
People
(Reporter: birtles, Assigned: masayuki)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
As of the latest Nightly (a few hours ago) backspace doesn't appear to work in the Gmail compose window.
This reproduces for me on Nightly even after reloading Gmail. Makoto has also been able to reproduce on Windows 10 (Japanese version).
Updated•6 years ago
|
Updated•6 years ago
|
Comment 1•6 years ago
|
||
Could you look this?
| Assignee | ||
Comment 2•6 years ago
|
||
Well, I'll take a look.
Comment 3•6 years ago
|
||
Maybe part 8?
| Assignee | ||
Comment 4•6 years ago
|
||
Must be from the point of regressed build.
| Assignee | ||
Comment 5•6 years ago
|
||
Okay, I got it.
| Assignee | ||
Comment 6•6 years ago
|
||
The check was written with NS_ASSERTION, but I realized that it's possible
case with mutation event listeners. Therefore, I changed it to if and
return, but I forgot to revert the sign of inequality.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 8•6 years ago
|
||
FYI: You can delete text with selecting the range with Shift + arrow keys for workaround.
Updated•6 years ago
|
Updated•6 years ago
|
Comment 10•6 years ago
|
||
| bugherder | ||
Comment 12•6 years ago
|
||
FYI, Nightly respins are underway for this bug.
Comment 13•6 years ago
|
||
| bugherder | ||
Comment 14•6 years ago
|
||
Thank you!
Comment 15•6 years ago
|
||
Please specify a root cause for this bug. See :tmaity for more information.
Updated•6 years ago
|
Description
•