Bug 1619852 - Fix the mistake in `HTMLEditor::HandleDeleteCollapsedSelectionAtTextNode()` r=m_kato

The check was written with `NS_ASSERTION`, but I realized that it's possible
case with mutation event listeners.  Therefore, I changed it to `if` and
`return`, but I forgot to revert the sign of inequality.

Differential Revision: https://phabricator.services.mozilla.com/D65280